chapter8_networking/nw-policy.yml
apiVersion: networking.k8s,io/v1
kind: NetworkPolicy
metadata:
  name: sample-nw-policy
  namespace: np-test
spec:
  podSelector:
    matchlabels:
      app: nginx
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchlabels:
          team: np-test
    ports:
    - protocol: TCP
      port: 80
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/24
    ports:
    - protocol: TCP
      port: 8080
